Change scroll snap type to fix issue on small viewports

--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ ul {
   height: 100%;
   overflow-y: auto;
   scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: y proximity;
 }
 
 .section {
